# IF826

./: README.md  pyproject.toml
roboarm/tests/: test_position.py
src/: kinematics.py  position.py
tests/: test_kinematics.py
